Fix styling of inline code and code blocks in comment bubble tooltips.
The new styling for the inline code and code blocks were looking less
than stellar in the comment bubble tooltips. The borders on both were
too light, making them appear a bit fuzzy, and the code blocks were
offset incorrectly.

This updates the styles to provide a better overall look in both the
draft and published comment tooltips.

A future change will redo the style of the tooltips to improve their
overall readability.

Testing Done:
Tested inline code and code blocks in both draft and published
comments.

Reviewed at https://reviews.reviewboard.org/r/8193/

--- a/reviewboard/static/rb/css/defs.less
+++ b/reviewboard/static/rb/css/defs.less
@@ -157,6 +157,12 @@
 @comment-flag-ghost-color: #eeeeec;
 @comment-flag-ghost-border-color: #888a85;
 
+// Comment flag tooltip
+@comments-tooltip-padding: 5px;
+@comments-tooltip-border-color: #5170B3;
+@comments-tooltip-background: @comment-flag-color;
+@comments-tooltip-draft-background: @comment-flag-draft-color;
+
 // Comment dialog
 @comment-dlg-bg: #ACEB6F;
 @comment-dlg-border-color: darken(@comment-dlg-bg, 40%);
